<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayuotActivity">

    <ImageView
        android:id="@+id/imageViewContactBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:adjustViewBounds="true"
        android:src="@drawable/contact_back"
        app:layout_constraintBottom_toTopOf="@id/tableLayoutContactInf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayoutContactInf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewContactBack">

        <TableRow android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/contact_name"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/contact_name_hint"
                android:textSize="20sp" />
        </TableRow>

        <TableRow android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/textViewOrganisation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="6dp"
                android:text="@string/contact_organisation"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextOrganisation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/contact_organisation_hint"
                android:textSize="20sp" />
        </TableRow>

        <TableRow android:layout_marginTop="4dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp">

                <ImageView
                    android:id="@+id/imageViewPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:adjustViewBounds="true"
                    android:src="@drawable/contact_phone" />

            </RelativeLayout>

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="-4dp"
                android:background="@android:color/transparent"
                android:hint="@string/phone_number_hint"
                android:inputType="phone"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView />

            <TextView
                android:id="@+id/textViewPhoneHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:hint="@string/phone_hint"
                android:textSize="12sp" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="saveContact"
            android:text="@string/save_contact" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>